# paralegrep

./: CMakeLists.txt  README.md
fileset/: 100a.txt  101a.txt  102a.txt  103.txt  105a.txt  106.txt  107a.txt  108.txt  109.txt  110a.txt  400.txt  550a.txt  vonada.txt
include/: thread_dispatcher.h  thread_ranking.h  thread_worker.h  utils.h
logs/: log.out
src/: main.c  thread_dispatcher.c  thread_ranking.c  thread_worker.c  utils.c
